增加异步日志相关的代码